// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project overview Reducer should bind initial data  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": true,
  "loading": false,
  "notify": 0,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`Project overview Reducer should handle add project overview data  1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 1,
        "approverTypeDescription": "HOP",
        "projectApprovalId": "",
        "projectApprovalRange": 1,
        "projectApprovalRangeDescription": "Authorised By",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 2,
        "approverTypeDescription": "AGM/AD",
        "projectApprovalId": "",
        "projectApprovalRange": 2,
        "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 3,
        "approverTypeDescription": "ComM",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 4,
        "approverTypeDescription": "BUL",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 5,
        "approverTypeDescription": "DPD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 6,
        "approverTypeDescription": "DMD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 7,
        "approverTypeDescription": "DofP",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 8,
        "approverTypeDescription": "PComM",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 9,
        "approverTypeDescription": "COO/UKFD",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 10,
        "approverTypeDescription": "CEO/GroupFD",
        "projectApprovalId": "",
        "projectApprovalRange": 6,
        "projectApprovalRangeDescription": "Over $ 3 Million Authority",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 11,
        "approverTypeDescription": "CBRE Regulations",
        "projectApprovalId": "",
        "projectApprovalRange": 7,
        "projectApprovalRangeDescription": "Over $ 4 and half Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 1,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`Project overview Reducer should handle edit  project overview data  1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 1,
        "approverTypeDescription": "HOP",
        "projectApprovalId": "",
        "projectApprovalRange": 1,
        "projectApprovalRangeDescription": "Authorised By",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 2,
        "approverTypeDescription": "AGM/AD",
        "projectApprovalId": "",
        "projectApprovalRange": 2,
        "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 3,
        "approverTypeDescription": "ComM",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 4,
        "approverTypeDescription": "BUL",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 5,
        "approverTypeDescription": "DPD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 6,
        "approverTypeDescription": "DMD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 7,
        "approverTypeDescription": "DofP",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 8,
        "approverTypeDescription": "PComM",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 9,
        "approverTypeDescription": "COO/UKFD",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 10,
        "approverTypeDescription": "CEO/GroupFD",
        "projectApprovalId": "",
        "projectApprovalRange": 6,
        "projectApprovalRangeDescription": "Over $ 3 Million Authority",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 11,
        "approverTypeDescription": "CBRE Regulations",
        "projectApprovalId": "",
        "projectApprovalRange": 7,
        "projectApprovalRangeDescription": "Over $ 4 and half Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 1,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`Project overview Reducer should handle error while add project overview data  1`] = `
Object {
  "error": undefined,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 1,
        "approverTypeDescription": "HOP",
        "projectApprovalId": "",
        "projectApprovalRange": 1,
        "projectApprovalRangeDescription": "Authorised By",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 2,
        "approverTypeDescription": "AGM/AD",
        "projectApprovalId": "",
        "projectApprovalRange": 2,
        "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 3,
        "approverTypeDescription": "ComM",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 4,
        "approverTypeDescription": "BUL",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 5,
        "approverTypeDescription": "DPD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 6,
        "approverTypeDescription": "DMD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 7,
        "approverTypeDescription": "DofP",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 8,
        "approverTypeDescription": "PComM",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 9,
        "approverTypeDescription": "COO/UKFD",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 10,
        "approverTypeDescription": "CEO/GroupFD",
        "projectApprovalId": "",
        "projectApprovalRange": 6,
        "projectApprovalRangeDescription": "Over $ 3 Million Authority",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 11,
        "approverTypeDescription": "CBRE Regulations",
        "projectApprovalId": "",
        "projectApprovalRange": 7,
        "projectApprovalRangeDescription": "Over $ 4 and half Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 2,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`Project overview Reducer should handle get additional details error data  1`] = `undefined`;

exports[`Project overview Reducer should handle project activities error 1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 1,
        "approverTypeDescription": "HOP",
        "projectApprovalId": "",
        "projectApprovalRange": 1,
        "projectApprovalRangeDescription": "Authorised By",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 2,
        "approverTypeDescription": "AGM/AD",
        "projectApprovalId": "",
        "projectApprovalRange": 2,
        "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 3,
        "approverTypeDescription": "ComM",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 4,
        "approverTypeDescription": "BUL",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 5,
        "approverTypeDescription": "DPD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 6,
        "approverTypeDescription": "DMD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 7,
        "approverTypeDescription": "DofP",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 8,
        "approverTypeDescription": "PComM",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 9,
        "approverTypeDescription": "COO/UKFD",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 10,
        "approverTypeDescription": "CEO/GroupFD",
        "projectApprovalId": "",
        "projectApprovalRange": 6,
        "projectApprovalRangeDescription": "Over $ 3 Million Authority",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 11,
        "approverTypeDescription": "CBRE Regulations",
        "projectApprovalId": "",
        "projectApprovalRange": 7,
        "projectApprovalRangeDescription": "Over $ 4 and half Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 0,
  "projectActivities": Object {
    "data": undefined,
    "error": null,
    "loading": false,
    "notify": 1,
  },
}
`;

exports[`Project overview Reducer should handle project activities success 1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 1,
        "approverTypeDescription": "HOP",
        "projectApprovalId": "",
        "projectApprovalRange": 1,
        "projectApprovalRangeDescription": "Authorised By",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 2,
        "approverTypeDescription": "AGM/AD",
        "projectApprovalId": "",
        "projectApprovalRange": 2,
        "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 3,
        "approverTypeDescription": "ComM",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 4,
        "approverTypeDescription": "BUL",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 5,
        "approverTypeDescription": "DPD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 6,
        "approverTypeDescription": "DMD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 7,
        "approverTypeDescription": "DofP",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 8,
        "approverTypeDescription": "PComM",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 9,
        "approverTypeDescription": "COO/UKFD",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 10,
        "approverTypeDescription": "CEO/GroupFD",
        "projectApprovalId": "",
        "projectApprovalRange": 6,
        "projectApprovalRangeDescription": "Over $ 3 Million Authority",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 11,
        "approverTypeDescription": "CBRE Regulations",
        "projectApprovalId": "",
        "projectApprovalRange": 7,
        "projectApprovalRangeDescription": "Over $ 4 and half Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 0,
  "projectActivities": Object {
    "data": Object {
      "projectAdditionalDetail": Object {
        "authorizedBy": "",
        "authorizedByHop": "",
        "authorizedBySecond": "",
        "authorizedByThird": "",
        "budget": 1,
        "cdmNotifiable": false,
        "commenceDate": "2019-12-17T11:53:25.003Z",
        "comments": "",
        "completionDate": "2019-12-17T11:53:25.003Z",
        "creditCheckResult": "",
        "enquiryReceivedFrom": "",
        "enquiryTypeId": -1,
        "finalAccountDate": "2019-12-17T11:53:25.003Z",
        "firstValuationDate": "2019-12-17T11:53:25.003Z",
        "formOfContract": "",
        "insurance": "",
        "isProjectLive": false,
        "liquidatedDamages": "",
        "mainContractor": "",
        "milestones": "",
        "paymentTerms": "",
        "projectAddDetailId": "",
        "projectId": "",
        "projectRisk1": "",
        "projectRisk2": "",
        "projectRisk3": "",
        "projectRiskControlMeasure1": "",
        "projectRiskControlMeasure2": "",
        "projectRiskControlMeasure3": "",
        "retention": "",
        "siteAddress": "",
        "valuationIntervals": "",
        "workTypeId": -1,
      },
      "projectApprovals": Array [
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 1,
          "approverTypeDescription": "HOP",
          "projectApprovalId": "",
          "projectApprovalRange": 1,
          "projectApprovalRangeDescription": "Authorised By",
          "projectId": "",
          "showRangeLabel": true,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 2,
          "approverTypeDescription": "AGM/AD",
          "projectApprovalId": "",
          "projectApprovalRange": 2,
          "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
          "projectId": "",
          "showRangeLabel": true,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 3,
          "approverTypeDescription": "ComM",
          "projectApprovalId": "",
          "projectApprovalRange": 3,
          "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
          "projectId": "",
          "showRangeLabel": true,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 4,
          "approverTypeDescription": "BUL",
          "projectApprovalId": "",
          "projectApprovalRange": 3,
          "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
          "projectId": "",
          "showRangeLabel": false,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 5,
          "approverTypeDescription": "DPD",
          "projectApprovalId": "",
          "projectApprovalRange": 4,
          "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
          "projectId": "",
          "showRangeLabel": true,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 6,
          "approverTypeDescription": "DMD",
          "projectApprovalId": "",
          "projectApprovalRange": 4,
          "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
          "projectId": "",
          "showRangeLabel": false,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 7,
          "approverTypeDescription": "DofP",
          "projectApprovalId": "",
          "projectApprovalRange": 5,
          "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
          "projectId": "",
          "showRangeLabel": true,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 8,
          "approverTypeDescription": "PComM",
          "projectApprovalId": "",
          "projectApprovalRange": 5,
          "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
          "projectId": "",
          "showRangeLabel": false,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 9,
          "approverTypeDescription": "COO/UKFD",
          "projectApprovalId": "",
          "projectApprovalRange": 5,
          "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
          "projectId": "",
          "showRangeLabel": false,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 10,
          "approverTypeDescription": "CEO/GroupFD",
          "projectApprovalId": "",
          "projectApprovalRange": 6,
          "projectApprovalRangeDescription": "Over $ 3 Million Authority",
          "projectId": "",
          "showRangeLabel": true,
          "userId": "",
        },
        Object {
          "approvalStatus": 1,
          "approvalStatusDescription": "Pending",
          "approverType": 11,
          "approverTypeDescription": "CBRE Regulations",
          "projectApprovalId": "",
          "projectApprovalRange": 7,
          "projectApprovalRangeDescription": "Over $ 4 and half Million",
          "projectId": "",
          "showRangeLabel": true,
          "userId": "",
        },
      ],
      "projectId": "",
    },
    "error": null,
    "loading": false,
    "notify": 1,
  },
}
`;

exports[`Project overview Reducer should reset project overview notifier state 1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 1,
        "approverTypeDescription": "HOP",
        "projectApprovalId": "",
        "projectApprovalRange": 1,
        "projectApprovalRangeDescription": "Authorised By",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 2,
        "approverTypeDescription": "AGM/AD",
        "projectApprovalId": "",
        "projectApprovalRange": 2,
        "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 3,
        "approverTypeDescription": "ComM",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 4,
        "approverTypeDescription": "BUL",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 5,
        "approverTypeDescription": "DPD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 6,
        "approverTypeDescription": "DMD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 7,
        "approverTypeDescription": "DofP",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 8,
        "approverTypeDescription": "PComM",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 9,
        "approverTypeDescription": "COO/UKFD",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 10,
        "approverTypeDescription": "CEO/GroupFD",
        "projectApprovalId": "",
        "projectApprovalRange": 6,
        "projectApprovalRangeDescription": "Over $ 3 Million Authority",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 11,
        "approverTypeDescription": "CBRE Regulations",
        "projectApprovalId": "",
        "projectApprovalRange": 7,
        "projectApprovalRangeDescription": "Over $ 4 and half Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 0,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`Project overview Reducer should reset project overview state 1`] = `undefined`;

exports[`Project overview Reducer should reset project overview state data  1`] = `undefined`;

exports[`Project overview Reducer should set loading true 1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 1,
        "approverTypeDescription": "HOP",
        "projectApprovalId": "",
        "projectApprovalRange": 1,
        "projectApprovalRangeDescription": "Authorised By",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 2,
        "approverTypeDescription": "AGM/AD",
        "projectApprovalId": "",
        "projectApprovalRange": 2,
        "projectApprovalRangeDescription": "Authorised By Up to $ 100K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 3,
        "approverTypeDescription": "ComM",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 4,
        "approverTypeDescription": "BUL",
        "projectApprovalId": "",
        "projectApprovalRange": 3,
        "projectApprovalRangeDescription": "Authorised By Up to $ 250K",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 5,
        "approverTypeDescription": "DPD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 6,
        "approverTypeDescription": "DMD",
        "projectApprovalId": "",
        "projectApprovalRange": 4,
        "projectApprovalRangeDescription": "Authorised By Up to $ 1 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 7,
        "approverTypeDescription": "DofP",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 8,
        "approverTypeDescription": "PComM",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 9,
        "approverTypeDescription": "COO/UKFD",
        "projectApprovalId": "",
        "projectApprovalRange": 5,
        "projectApprovalRangeDescription": "Authorised By Up to $ 3 Million",
        "projectId": "",
        "showRangeLabel": false,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 10,
        "approverTypeDescription": "CEO/GroupFD",
        "projectApprovalId": "",
        "projectApprovalRange": 6,
        "projectApprovalRangeDescription": "Over $ 3 Million Authority",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
      Object {
        "approvalStatus": 1,
        "approvalStatusDescription": "Pending",
        "approverType": 11,
        "approverTypeDescription": "CBRE Regulations",
        "projectApprovalId": "",
        "projectApprovalRange": 7,
        "projectApprovalRangeDescription": "Over $ 4 and half Million",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": true,
  "notify": 0,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;
